# multi-llm-dev-framework

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: litellm.example.yaml  prompts.yaml  routing_rules.yaml
scripts/: nightly.ps1  start_services.ps1
src/: __init__.py
src/agents/: __init__.py  agent_coordinator.py
src/pipelines/: __init__.py  sentiment_pipeline.py
src/protocols/: __init__.py  llm_protocol.py
src/router/: __init__.py  policy_router.py
templates/: handoff.md  task_card.md
